refactor: standardize service layer implementations and interfaces (JavaDoc, Logging, DTO extraction)